# roboface

./: .gitmodules  Dockerfile  README.md  main.py  pyproject.toml
scripts/: webrtc_example.py
src/frontend/: index.html
src/scripts/: webrtc_example.py
src/scripts/static/: index.html
