[project]
name = "roboface"
version = "0.1.0"
description = "The AI Native Open Source Robotics Stack"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.12",
    "aiortc>=1.10.1",
    "simpler-env",
]


[tool.uv.sources]
simpler-env = { path = "SimplerEnv", editable = true }
